--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,18 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.page-header {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  background-color: #2B2D42;
+  color: white;
+  padding: 1em;
+}
+
+.page-sidebar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--s1);
+  height: 100%;
+}
+
+.page-sidebar > :first-child {
+  flex-grow: 1;
+  padding: 1em;
+  background-color: #8D99AE;
+}
+
+.page-sidebar > :last-child {
+  flex-basis: 0;
+  flex-grow: 999;
+  min-width: 50%;
+  padding: 1em;
+  background-color: #EDF2F4;
 }
