--- a/src/App/App.css
+++ b/src/App/App.css
@@ -27,6 +27,11 @@
   background-color: #8D99AE;
 }
 
+.page-sidebar > :first-child > * {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
 .page-sidebar > :last-child {
   flex-basis: 0;
   flex-grow: 999;
